--- a/package.json
+++ b/package.json
@@ -10,16 +10,29 @@
     "Programming Languages"
   ],
   "contributes": {
-    "languages": [{
-      "id": "skript",
-      "aliases": ["Skript", "skript"],
-      "extensions": [".sk"],
-      "configuration": "./language-configuration.json"
-    }],
-    "grammars": [{
-      "language": "skript",
-      "scopeName": "source.skript",
-      "path": "./syntaxes/skript.tmLanguage.json"
-    }]
+    "languages": [
+      {
+        "id": "skript",
+        "aliases": [
+          "Skript",
+          "skript"
+        ],
+        "extensions": [
+          ".sk"
+        ],
+        "configuration": "./language-configuration.json"
+      }
+    ],
+    "grammars": [
+      {
+        "language": "skript",
+        "scopeName": "source.skript",
+        "path": "./syntaxes/skript.tmLanguage.json"
+      }
+    ]
+  },
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/username/repository.git"
   }
 }
