--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "skript-language-support",
   "displayName": "Skript Language Support",
   "description": "Syntax highlighting for skript lang.",
-  "version": "0.0.1",
+  "publisher": "GeoDavidson",
+  "version": "0.0.2",
+  "icon": "images/icon.png",
   "engines": {
     "vscode": "^1.86.0"
   },
@@ -32,7 +34,7 @@
     ]
   },
   "repository": {
-    "type": "git",
-    "url": "git://github.com/username/repository.git"
+    "type": "github",
+    "url": "https://github.com/GeoDavidson/skript-language-support.git"
   }
 }
